# netbox-config-backup

./: .black  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  ruff.toml  setup.py
.github/: FUNDING.yml  configuration.testing.py
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: build-test.yml  ci-tests.yml  ci.yml  pr_approval.yml  pypi.yml  release.yml
netbox_config_backup/: __init__.py  choices.py  filtersets.py  forms.py  git.py  helpers.py  navigation.py  tables.py  tasks.py  template_content.py  urls.py  utils.py  views.py
netbox_config_backup/api/: __init__.py  nested_serializers.py  serializers.py  urls.py  views.py
netbox_config_backup/backup/: processing.py
netbox_config_backup/exceptions/: __init__.py
netbox_config_backup/graphql/: filters.py  schema.py  types.py
netbox_config_backup/jobs/: __init__.py  backup.py  housekeeping.py
netbox_config_backup/migrations/: 0001_initial.py  0002_git_models.py  0003_primary_model_to_bigid.py  0004_custom_constraints.py  0005_commit_add_time_field.py  0006_backup_add_commit_last_time.py  0007_backup_job_add_scheduled.py  0008_backupjob_scheduled_nullable.py  0009_bctc_file_model_backup_fk_restructure.py  0010_backup_ip.py  0011_alter_backup_name.py  0012_backup_status.py  0013_backup__to_netboxmodel.py  0014_backup_config_status.py  0015_backup_comments_backup_description.py  0016_add_pid_to_backup_job.py  0017_add_job_to_backupjob.py  0018_move_to_nbmodel.py  0019_alter_backup_device.py  0020_clean_rq_queue.py  0021_backupfile_last_change.py  0022_model_ordering.py  (+1 more)
(+41 files in other folders)
