[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "netbox-config-backup"
authors = [
    {name = "Daniel Sheppard", email = "dans@dansheps.com"}
]
maintainers = [
    {name = "Daniel Sheppard", email = "dans@dansheps.com"},
]
description = "A NetBox Switch Configuration Backup Plugin"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["netbox-plugin", ]
version = "2.1.6"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    'netbox-napalm-plugin',
    'netmiko>=4.0.0',
    'napalm',
    'uuid',
    'dulwich',
    'pydriller',
    'deepdiff',
]

[project.urls]
Documentation = "https://github.com/dansheps/netbox-config-backup/blob/main/README.md"
Source = "https://github.com/dansheps/netbox-config-backup"
Tracker = "https://github.com/dansheps/netbox-config-backup/issues"

[tool.setuptools.packages.find]
exclude=["netbox_config_backup.tests"]

[tool.black]
skip-string-normalization = 1
